# BE_Project_bckp

./: .dockerignore  .env.sim  .gitignore  Dockerfile.client  Dockerfile.server  PLAN1.md  PLAN2.md  PLAN3.md  PLAN4.md  Plan_Implementation.md  README.md  UPDATION.MD  client-requirements.txt  client-starter.sh  client_ui_prototype.html  docker-compose.yml  flower.toml  launch_client.py  launch_server.py  main.py  pyproject.toml  server-requirements.txt  server-starter.sh  server.env.example  test_client.py  test_methods.py  ui-requirements.txt
client/: __main__.py  client_app.py  client_common.py  inference_engine.py  shap_engine.py  supernode_runner.py
client/control_api/: app.py
common/: artifacts.py  classification_base.py  config.py  data_loader.py  network.py
docker/: client-entrypoint.sh  control-api-entrypoint.sh  inference-api-entrypoint.sh  model-api-entrypoint.sh  server-entrypoint.sh
examples/: client1.env.example  client2.env.example  client3.env.example  client4.env.example  server.env.example
model/: latest_global_metadata.json  latest_global_model.npz
preprocessing/: columns.txt
privacy/: __init__.py  dp_aggregation.py
server/: __main__.py  client_manager.py  custom_strategy.py  evaluator.py  event_driven_workflow.py  logging_utils.py  server_app.py  superlink_runner.py
server/control_api/: app.py
server/inference_api/: app.py
server/model_api/: app.py
server/state/: __init__.py  store.py
simulate/: partition_data.py  simulate.sh
ui/client/: client_ui_prototype.html  controller.py  controller2.py  inspect_flwr.py  main.py  (+2 more)
(+9 files in other folders)
